--- a/package.json
+++ b/package.json
@@ -9,33 +9,29 @@
     "test": "jest --runInBand --coverage"
   },
   "dependencies": {
-    "aws-sdk": "^2.1043.0",
-    "axios": "^0.24.0",
-    "source-map-support": "^0.5.21"
+    "axios": "1.8.4",
+    "source-map-support": "0.5.21"
   },
   "devDependencies": {
-    "@tsconfig/node12": "^1.0.9",
-    "@types/aws-lambda": "^8.10.86",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.11",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.4.0",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "jest": "^27.4.3",
-    "jest-junit": "^13.0.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.0",
-    "ts-node": "^10.4.0",
-    "typescript": "~4.5.2"
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@commitlint/format": "19.8.0",
+    "@tsconfig/node22": "22.0.1",
+    "@types/aws-lambda": "8.10.148",
+    "@types/jest": "29.5.14",
+    "@types/luxon": "3.6.2",
+    "@typescript-eslint/eslint-plugin": "8.29.0",
+    "@typescript-eslint/parser": "8.29.0",
+    "aws-sdk-client-mock": "4.1.0",
+    "aws-sdk-client-mock-jest": "4.1.0",
+    "eslint": "9.24.0",
+    "husky": "9.1.7",
+    "husky-check-email": "0.0.8",
+    "jest": "29.7.0",
+    "jest-junit": "16.0.0",
+    "lint-staged": "15.5.0",
+    "prettier": "3.5.3",
+    "ts-jest": "29.3.1",
+    "typescript": "5.8.3"
   }
 }
